@@ -80,7 +80,7 @@ protected:
 
 public:
   SimpleCollection(
-      store::Item_t& aName,
+      const store::Item_t& aName,
       uint32_t aFlags,
       const store::Item_t& aNodeType,
       bool aDynamicCollection = false);
