@@ -917,7 +917,7 @@ store::Iterator_t SimpleStore::listMapNames()
   an error.
 ********************************************************************************/
 store::Collection_t SimpleStore::createCollection(
-    store::Item_t& aName,
+    const store::Item_t& aName,
     uint32_t aFlags,
     const store::Item_t& aNodeType,
     bool aDynamicCollection)
