@@ -186,7 +186,7 @@ public:
   ulong createTreeId();
 
   store::Collection_t createCollection(
-      store::Item_t& aName,
+      const store::Item_t& aName,
       uint32_t aFlags,
       const store::Item_t& aNodeType,
       bool aDynamicCollection = false);
